--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
     - name: Generate documentation
-      run: vendor/bin/daux generate --themes=daux-blue
+      run: vendor/bin/daux generate --themes=themes
     - name: Deploy same repository 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
