--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -29,6 +29,6 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
         folder: "static"
-        token: ${{ secrets.GITHUB_TOKEN }}
+        token: ${{ secrets.GH_THOKEN_TEST_DAUX }}
         branch: master
         repository-name: preinboth/testDaux.github.io
