--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress --no-suggest
     - name: Generate documentation
-      run: vendor/bin/daux generate --themes=themes
+      run: bin/daux generate --value html.plausible_domain=testDaux.github.io
     - name: Deploy same repository 🚀
       uses: JamesIves/github-pages-deploy-action@4.1.4
       with:
@@ -32,4 +32,4 @@ jobs:
         token: ${{ secrets.GH_THOKEN_TEST_DAUX }}
         branch: master
         repository-name: preinboth/testDaux.github.io
-        
+
