--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,7 +1,9 @@
 # https://github.com/babel/babel/blob/main/.github/ISSUE_TEMPLATE/feature_request.yml
 name: "🚀 Feature Request"
 description: "I have a specific suggestion for Theos!"
-labels: ["needs triage", "Enhancement"]
+labels: ["Enhancement"]
+assignees:
+  - preinboth
 body:
   - type: markdown
     attributes:
