--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -8,7 +8,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        **Thanks for taking the time to suggest a new feature!** Please make sure you read our [issue guidelines](https://github.com/preinboth/testDaux/blob/master/.github/CONTRIBUTING.md) first, then fill out the fields below.
+        **Thanks for taking the time to suggest a new feature!** Please make sure you read our [issue guidelines](github.repository/blob/master/.github/CONTRIBUTING.md) first, then fill out the fields below.
 
   - type: textarea
     attributes:
